# AF-package-manager

./: CMakeLists.txt  README.md  flatpak.md  plan.md
cmake/: cmake_uninstall.cmake.in
cmake/modules/: FindALPM.cmake
docs/: AUR.md
include/core/: flatpak_manager.hpp  flatpak_package.hpp  package.hpp  packagemanager.hpp  repository.hpp  transaction.hpp
include/gui/: flatpak_install_dialog.hpp  flatpak_manager_tab.hpp  flatpak_process_dialog.hpp  install_progress_dialog.hpp  mainwindow.hpp  packageview.hpp  password_prompt_dialog.hpp  settingsdialog.hpp  transactiondialog.hpp  util.hpp
include/gui/components/: installed_packages_tab.hpp  search_tab.hpp
include/wayland/: wayland_backend.hpp  wayland_optimization.hpp  wayland_protocols.hpp  wayland_security.hpp
resources/: resources.qrc
resources/desktop/: pacmangui.desktop
resources/styles/: dark.qss  dark_colorful.qss  dynamic.qss  light.qss  light_colorful.qss
src/: CMakeLists.txt  main.cpp
src/aur/: aur_helper.cpp  aur_helper.hpp  aur_manager.cpp  aur_manager.hpp  aur_package.cpp  aur_package.hpp
src/core/: aur.cpp  flatpak_manager.cpp  flatpak_package.cpp  package.cpp  packagemanager.cpp  repository.cpp  transaction.cpp
src/gui/: flatpak_install_dialog.cpp  flatpak_manager_tab.cpp  flatpak_process_dialog.cpp  install_progress_dialog.cpp  mainwindow.cpp  mainwindow.cpp.bak  mainwindow.cpp.minimal  mainwindow.cpp.original  password_prompt_dialog.cpp  settingsdialog.cpp  util.cpp
src/gui/components/: installed_packages_tab.cpp  search_tab.cpp  terminal_dialog.cpp  terminal_dialog.hpp
src/wayland/: wayland_backend.cpp  wayland_optimization.cpp  wayland_protocols.cpp  wayland_security.cpp
tests/: CMakeLists.txt  package_test.cpp  packagemanager_test.cpp  repository_test.cpp  transaction_test.cpp
